# Briefly_Cloud_First_Always_Online

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  PoolWorkspace.txt  README.md  contexto.md  docker-compose.ec2.yml  docker-compose.yml  index.js  migracion_briefly.md  package-lock.json  package.json  pyrightconfig.json  tasks.md
apps/backend/intelligence-service/: pyproject.toml
apps/backend/intelligence-service/app/: config.py  main.py
apps/backend/intelligence-service/app/api/: routes.py
apps/backend/utility-service/: pyproject.toml
apps/backend/utility-service/app/: config.py  main.py
apps/backend/utility-service/app/api/: routes.py
apps/backend/workspace-service/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
apps/backend/workspace-service/alembic/: env.py
apps/backend/workspace-service/alembic/versions/: 001_initial_workspace_shared_text.py
apps/backend/workspace-service/app/: config.py  main.py
apps/backend/workspace-service/app/api/: dependencies.py  routes.py  schemas.py
apps/backend/workspace-service/app/config/: settings.py
apps/backend/workspace-service/app/domain/: document_metadata.py  errors.py  membership.py  workspace.py  workspace_shared_text.py
apps/backend/workspace-service/app/ports/: document_repository.py  membership_repository.py  token_verifier.py  workspace_repository.py  workspace_shared_text_repository.py
apps/backend/workspace-service/app/use_cases/: __init__.py  create_document.py  create_workspace.py  get_permissions.py  get_workspace.py  (+3 more)
apps/backend/workspace-service/tests/: test_auth.py
(+272 files in other folders)
