[project]
name = "intelligence-service"
version = "0.1.0"
description = "Intelligence Service - Briefl cloud-first backend"
requires-python = ">=3.12"

[tool.pyright]
pythonPath = ["${workspaceFolder}/apps/backend/intelligence-service"]
typeCheckingMode = "basic"
reportMissingTypeStubs = false

[tool.uvicorn]
host = "0.0.0.0"
port = 8004
